--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demchuk</title>
+    <title>Demchuk and Kyrlyk</title>
 </head>
 
 <body>
-    <h1>Практична№2 Демчук Степан</h1>
+    <h1>Практична№1 Демчук Степан і Кирлик Мартін</h1>
     <p>group PI-19-01</p>
 </body>
 
